Service Project/Kubernetes/service-project-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-project-deployment
  namespace: brewingstand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-project
  template:
    metadata:
      labels:
        app: service-project
    spec:
      containers:
        - name: service-project
          image: ghcr.io/brewing-stand/service-user:master
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
