Service Project/Kubernetes/service-project-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-project-service
spec:
  selector:
    app: project
  ports:
    - port: 8080
      targetPort: 8082
  type: ClusterIP
