Service Project/Kubernetes/service-project-kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-route
  namespace: brewingstand
  annotations:
    konghq.com/strip-path: 'false'
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/project
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-project-service
                port:
                  number: 8080
